added Scales and Axis to the chart

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Scatterplot Graph</h1>
+    <h1 id="title" >Doping in Professional Bicycle Racing</h1>
     <svg id="canvas">
 
     </svg>
