--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 <body>
     <h1 id="title" >Doping in Professional Bicycle Racing</h1>
     <svg id="canvas">
-
     </svg>
+    <div id='legend'>
+        Year (x) vs Time (y)</br>
+        Red - Doping Allegation | Green - No Doping Allegation
+    </div>
+    <div id='tooltip'></div>
 </body>
 <script defer src="./script.js"></script>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
