--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </svg>
     <div id='legend'>
         Year (x) vs Time (y)</br>
-        Red - Doping Allegation | Green - No Doping Allegation
+        Orange - Doping Allegation | Green - No Doping Allegation
     </div>
     <div id='tooltip'></div>
 </body>
